--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,9 @@
 
 
 <target name="compile" depends="clean, makedir">
-  <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false">
+  <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false"
+    debug="true"
+    debuglevel="lines,vars,source">
     <classpath>
       <pathelement path="lib/junit-4.12.jar"/>
       <pathelement path="lib/hamcrest-core-1.3.jar"/>
