--- a/build.xml
+++ b/build.xml
@@ -3,19 +3,22 @@
 <!-- setting variables for later use -->
 <!-- the value of a property is accessed via ${} -->
 <property name="src.dir" location="src" />
-<property name="build.dir" location="bin" />
+<property name="build.dir" location="build" />
+<property name="dest.dir" location="dest-client" />
 <property name="docs.dir" location="docs" />
 
 <!-- delete existing build -->
 <target name="clean">
   <delete dir="${build.dir}" />
   <delete dir="${docs.dir}" />
+  <mkdir dir="${dest.dir}" />
 </target>
 
 <!-- create build docs and dist -->
 <target name="makedir">
   <mkdir dir="${build.dir}" />
   <mkdir dir="${docs.dir}" />
+  <mkdir dir="${dest.dir}" />
 </target>
 
 
@@ -31,7 +34,7 @@
 </target>
 
 <target name="jar" depends="compile">
-  <jar destfile="Block-editor.jar" basedir="${build.dir}">
+  <jar destfile="${dest.dir}/ija-client.jar" basedir="${build.dir}">
     <manifest>
       <attribute name="Main-Class" value="main" />
     </manifest>
@@ -42,13 +45,13 @@
 <target name="main" depends="compile, jar">
   <description>Main target</description>
 </target>
-
+<!-- 
 <target name="run" depends="compile">
   <description>Test target</description>
-  <exec executable="/bin/sh">
+  <exec executable="/build/sh">
     <arg value="-c" />
-    <arg value="cd bin;java -cp .:../lib/junit-4.12.jar:../lib/hamcrest-core-1.3.jar:repository.jar org.junit.runner.JUnitCore block_editor.TestUkol2; cd -" />
+    <arg value="cd build;java -cp .:../lib/junit-4.12.jar:../lib/hamcrest-core-1.3.jar:repository.jar org.junit.runner.JUnitCore block_editor.TestUkol2; cd -" />
   </exec>
-</target>
+</target> -->
 
 </project>
