--- a/build.xml
+++ b/build.xml
@@ -5,19 +5,19 @@
 <property name="src.dir" location="src" />
 <property name="build.dir" location="build" />
 <property name="dest.dir" location="dest-client" />
-<property name="docs.dir" location="docs" />
+<property name="doc.dir" location="doc" />
 
 <!-- delete existing build -->
 <target name="clean">
   <delete dir="${build.dir}" />
-  <delete dir="${docs.dir}" />
+  <delete dir="${doc.dir}" />
   <mkdir dir="${dest.dir}" />
 </target>
 
 <!-- create build docs and dist -->
 <target name="makedir">
   <mkdir dir="${build.dir}" />
-  <mkdir dir="${docs.dir}" />
+  <mkdir dir="${doc.dir}" />
   <mkdir dir="${dest.dir}" />
 </target>
 
@@ -26,10 +26,6 @@
   <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false"
     debug="true"
     debuglevel="lines,vars,source">
-    <classpath>
-      <pathelement path="lib/junit-4.12.jar"/>
-      <pathelement path="lib/hamcrest-core-1.3.jar"/>
-    </classpath>
   </javac>
 </target>
 
@@ -46,10 +42,17 @@
   <description>Main target</description>
 </target>
 
-  <target name="doc" description="generate documentation">
-    <javadoc destdir="${docs.dir}">
+<target name="doc" description="generate documentation">
+  <javadoc destdir="${doc.dir}">
     <fileset dir="${src.dir}"/>
     <arg value="-html5"/>
-    </javadoc>
-  </target>
+  </javadoc>
+</target>
+
+<target name="run" description="runs application">
+  <java jar="dest-client/ija-client.jar" fork="true" failonerror="true">
+  </java>
+</target>
+
+
 </project>
